# trade

./: .gitignore  README.md  package.json  pyproject.toml  vite.config.ts  上证指数.ipynb  中国宏观经济.ipynb  恒生指数.ipynb  收藏癖.ipynb  日经.ipynb  纳指.ipynb  黄金.ipynb
.github/workflows/: deploy.yml
data/: Au99.99_daily.csv  XAUUSD_daily.csv  china_cpi.csv  china_gdp.csv  china_money_supply.csv  china_pmi.csv  hsi.csv  index_us_stock_sina.IXIC.csv  index_us_stock_sina.NDX.csv  index_us_stock_sina.csv  macro_china_au_report_df.csv  macro_china_consumer_goods_retail_df.csv  macro_china_cpi_df.csv  macro_china_cpi_monthly_df.csv  macro_china_cpi_yearly_df.csv  macro_china_cx_pmi_yearly_df.csv  macro_china_cx_services_pmi_yearly_df.csv  macro_china_czsr_df.csv  macro_china_daily_energy_df.csv  macro_china_enterprise_boom_index_df.csv  macro_china_exports_yoy_df.csv  macro_china_fdi_df.csv  macro_china_freight_index_df.csv  macro_china_fx_gold_df.csv  macro_china_fx_reserves_yearly_df.csv  macro_china_gdp_yearly_df.csv  macro_china_gdzctz_df.csv  macro_china_gyzjz_df.csv  macro_china_hgjck_df.csv  macro_china_hk_market_info_df.csv  macro_china_imports_yoy_df.csv  macro_china_industrial_production_yoy_df.csv  macro_china_m2_yearly_df.csv  macro_china_market_margin_sh_df.csv  macro_china_market_margin_sz_df.csv  macro_china_money_supply_df.csv  macro_china_national_tax_receipts_df.csv  macro_china_new_financial_credit_df.csv  macro_china_new_house_price_df.csv  macro_china_non_man_pmi_df.csv  (+20 more)
src/: App.vue  calculate_rsi.py  main.ts
src/assets/: main.css
src/components/: IndexCard.vue  (+1 more)
(+4 files in other folders)
