[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true

[project]
name = "trade"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "akshare>=1.16.95",
    "matplotlib>=3.10.3",
    "nbformat>=5.10.4",
    "plotly>=6.1.2",
    "scipy>=1.15.3",
    "yfinance>=0.2.61",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
